@@ -75,7 +75,52 @@ Array [
 ]
 `;
 
-exports[`mapTimelineEvents formats captured events 1`] = `
+exports[`mapTimelineEvents formats captured events with fee details 1`] = `
+Array [
+  Object {
+    "body": Array [],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": "Payment status changed to Paid",
+    "icon": <t
+      className=""
+      icon="sync"
+      size={24}
+    />,
+  },
+  Object {
+    "body": Array [],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": <React.Fragment>
+      $59.50 was added to your 
+      <a
+        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b281"
+      >
+        Apr 2, 2020 deposit
+      </a>
+    </React.Fragment>,
+    "icon": <t
+      className=""
+      icon="plus"
+      size={24}
+    />,
+  },
+  Object {
+    "body": Array [
+      "Fee: $3.50 (1.9% + $0.15)",
+      "Net deposit: $59.50",
+    ],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": "A payment of $63.00 was successfully charged",
+    "icon": <t
+      className="is-success"
+      icon="checkmark"
+      size={24}
+    />,
+  },
+]
+`;
+
+exports[`mapTimelineEvents formats captured events without fee details 1`] = `
 Array [
   Object {
     "body": Array [],
