@@ -67,7 +67,7 @@ describe( 'mapTimelineEvents', () => {
 		).toMatchSnapshot();
 	} );
 
-	test( 'formats captured events', () => {
+	test( 'formats captured events without fee details', () => {
 		expect(
 			mapTimelineEvents( [
 				{
@@ -79,6 +79,28 @@ describe( 'mapTimelineEvents', () => {
 						id: 'dummy_po_5eaada696b281',
 					},
 					fee: 350,
+					type: 'captured',
+				},
+			] )
+		).toMatchSnapshot();
+	} );
+
+	test( 'formats captured events with fee details', () => {
+		expect(
+			mapTimelineEvents( [
+				{
+					amount: 6300,
+					currency: 'USD',
+					datetime: 1585751874,
+					deposit: {
+						arrival_date: 1585838274,
+						id: 'dummy_po_5eaada696b281',
+					},
+					fee: 350,
+					fee_rates: {
+						percentage: 0.0195,
+						fixed: 15,
+					},
 					type: 'captured',
 				},
 			] )
